Onboarding süreci atlandığında kullanıcıya gösterilecek yeni bir "SkippedOnboardingView" bileşeni eklendi. Kullanıcı tercihleri modeline "onboardingRestartCount" alanı eklendi ve bu alanın güncellenmesi için gerekli yöntemler oluşturuldu. Ayrıca, kullanıcıların atlanan onboarding sürecini yeniden başlatmalarını sağlayacak bir "RestartOnboardingRow" bileşeni eklendi. Uygulama genelinde yerelleştirme güncellemeleri yapıldı ve yeni metinler eklendi.

--- a/polynap/Resources/Localizations/Common.xcstrings
+++ b/polynap/Resources/Localizations/Common.xcstrings
@@ -1540,6 +1540,47 @@
         }
       }
     },
+    "general.skip" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Überspringen"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Skip"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "スキップ"
+          }
+        },
+        "ms" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Langkau"
+          }
+        },
+        "th" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "ข้าม"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Atla"
+          }
+        }
+      }
+    },
     "rating.appstore.button" : {
       "extractionState" : "manual",
       "localizations" : {
